--- a/content/resources/res-18-002s08-th.md
+++ b/content/resources/res-18-002s08-th.md
@@ -7,7 +7,9 @@ image_metadata:
   caption: A 3D plot of a 2D sinc function. (Image by MIT OpenCourseWare.)
   credit: ''
   image-alt: A multi-colored 3 dimensional plot of a 2 dimensional sinc function.
+learning_resource_types: []
 resourcetype: Image
 title: res-18-002s08-th.jpg
+type: OCWImage
 uid: e961bbc2-0206-a770-85b9-1bc54baee908
 ---
