--- a/content/resources/res-18-002s08.md
+++ b/content/resources/res-18-002s08.md
@@ -7,7 +7,9 @@ image_metadata:
   caption: A 3D plot of a 2D sinc function. (Image by MIT OpenCourseWare.)
   credit: ''
   image-alt: A multi-colored 3 dimensional plot of a 2 dimensional sinc function.
+learning_resource_types: []
 resourcetype: Image
 title: res-18-002s08.jpg
+type: OCWImage
 uid: 83054739-5aef-dce8-1c5e-4f16624d5c3b
 ---
