--- a/content/resources/res-18-002s08-th.md
+++ b/content/resources/res-18-002s08-th.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: ''
   image-alt: A multi-colored 3 dimensional plot of a 2 dimensional sinc function.
 learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: res-18-002s08-th.jpg
 uid: e961bbc2-0206-a770-85b9-1bc54baee908
