--- a/content/resources/res-18-002s08.md
+++ b/content/resources/res-18-002s08.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: ''
   image-alt: A multi-colored 3 dimensional plot of a 2 dimensional sinc function.
 learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: res-18-002s08.jpg
 uid: 83054739-5aef-dce8-1c5e-4f16624d5c3b
